# dibisoreports

./: .gitignore  CLAUDE.md  README_RUN.md  docker-compose.yml  package-lock.json  package.json
dibiso-html/: base.html.j2  biso-biblio.html.j2  biso.html.j2  pubpart.html.j2
dibiso-html-templates/dibiso-html/: biso.html.j2  pubpart.html.j2
dibiso-html/css/: base.css  biso.css  print.css  pubpart.css
dibiso-reporting-api/: .env.template  README.md
dibiso-reporting-api/app/: main.py  users.py
dibiso-reporting-webapp/: .env.template  Dockerfile  vite.config.js
dibiso-reporting-webapp/src/: App.jsx
dibisoplot/: CITATION.cff  README.md  pyproject.toml
dibisoplot/biso/: biso.py
dibisoplot/dibisoplot/: dibisoplot.py
dibisoplot/dibisoplot/biso/: __init__.py  biso.py
dibisoplot/dibisoplot/locales/fr/LC_MESSAGES/: dibisoplot.mo  dibisoplot.po
dibisoplot/dibisoplot/pubpart/: pubpart.py
dibisoreporting/: CITATION.cff  README.md  dibisoreporting.py  pyproject.toml  requirements.txt
dibisoreporting/biso/: biso.py
dibisoreporting/dibisoreporting/: __init__.py  dibisoreporting.py
dibisoreporting/dibisoreporting/biso/: biso.py
dibisoreporting/dibisoreporting/pubpart/: pubpart.py
dibisoreporting/sphinx-doc/notebooks/: biso.ipynb  pubpart.ipynb
dibisoreporting/sphinx-doc/reference/: index.rst
src/: App.jsx
