[build-system]
requires = ["setuptools>=65", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dibisoreporting"
dynamic = ["version"]
description = "A Python library for generating bibliometric reports, developed at the DiBISO."
readme = "README.md"
authors = [{ name = "Romain Thomas", email = "contact@romainthomas.net" }]
license = "GPL-3.0-only"
license-files = [
    "LICENSE.txt"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed"
]
keywords = ["DiBISO", "Data analysis", "Scientific research", "Plotly", "Jinja2"]
dependencies = [
    "dibisoplot>=0.9",
    "requests",
    "jinja2>=3.1",
    "weasyprint>=62"
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["dibisoreporting", "dibisoreporting.biso"]

[tool.setuptools.dynamic]
version = { attr = "dibisoreporting._version.__version__" }

[project.urls]
Homepage = "https://pypi.org/project/dibisoreporting/"
Repository = "https://github.com/dibiso-upsaclay/dibisoreporting"
Documentation = "https://dibiso-upsaclay.github.io/dibisoreporting/"
DOI = "https://doi.org/10.5281/zenodo.17251577"
